# splinetlsm

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.py
core/: CMakeLists.txt  README.md
core/src/: splinetlsm.h
core/src/splinetlsm/: AUROC.h  coefs.cpp  coefs.h  config.cpp  config.h  latent_positions.cpp  latent_positions.h  metrics.cpp  metrics.h  moments.cpp  moments.h  omega.cpp  omega.h  parameters.cpp  parameters.h  svi.cpp  svi.h  typedefs.h  variances.cpp  variances.h  wrapper_utils.cpp  wrapper_utils.h
core/src/splinetlsm/samplers/: dyad_sampler.cpp  dyad_sampler.h  nonedge_sampler.cpp  nonedge_sampler.h  time_sampler.cpp  time_sampler.h
core/tests/: asserts.h  coefs_test.cpp  config_test.cpp  datasets.cpp  datasets.h  latent_positions.cpp  mgp_test.cpp  moments_test.cpp  omega_test.cpp  params_test.cpp  sampler_test.cpp  setup.cpp  sparse_test.cpp  svi_test.cpp  variances_test.cpp
examples/: fase.R  make_network.py  polecat_example.py  synthetic.py
notebooks/: Bayesian P-Splines.ipynb  Untitled.ipynb
scripts/: README.md  fase.R  make_network.py  simulation_comparison.py  simulation_fase.py  simulation_lady.py  simulation_mcmc_vi_comparison.py  simulation_nonedge_sensitivity.py  simulation_recovery.py  simulation_time_fraction_sensitivity.py
scripts/application_polecat/: POLECAT.ipynb
scripts/output_comparison/: print_results.py  process.py
scripts/output_mcmc_vi_comparison/: plot.py  process.py
scripts/output_nonedge_sensitivity/: plot.py
scripts/output_parameter_recovery/: plot_nodes.py  plot_time.py  process.py
scripts/output_time_fraction_sensitivity/: plot.py  process.py
splinetlsm/: __init__.py  _svi.pxd  _svi.pyx  armadillo.pxd  armadillo.pyx  bspline.py  dynamic_gof.py  gp.py  hmc.py  initialize.py  lady.py  mcmc.py  mcmc_utils.py  procrustes.py  static_gof.py  svi.pxd  svi.py  svi.pyx
splinetlsm/datasets/: __init__.py  load_facebook.py  load_polecat.py  load_primaryschool.py  synthetic.py
splinetlsm/datasets/raw_data/polecat/: dist_node_names.npy  iso_regions.csv
splinetlsm/datasets/raw_data/sp_primary_school/: covariates.csv
